Remove I#vouch.